[package]
name = "phys-buzz"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-macros = { path = "derive-macros" }
bevy = "0.8.0"
bevy_prototype_lyon = "0.6.0"
lazy_static = "1.4.0"

[workspace]
resolver = "2"

